[package]
name = "wallet-utils"
version = "0.1.0"
edition = "2021"
authors = ["Gautam G Sabhahit <gautamgsabhahit@gmail.com>"]
description = "A Rust crate for decoding ABI-encoded wallet calldata based on method selectors"
repository = "https://github.com/jiffy-labs/wallet-utils"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = "0.8.0"
alloy-primitives = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"